# predictables-report

./: LICENSE  README.md  pyproject.toml  requirements.txt
predictables_report/: _BaseReport.py  _Grid.py  _Report.py
predictables_report/src/: _get_unique.py  _segment_features_for_report.py
predictables_report/tests/: test_copy.py  test_heading.py  test_init.py  test_segment_features_for_report.py  test_set.py  test_style.py
